Get redux working

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.0.0-rc.0",
+    "enzyme": "^2.0.0",
+    "eslint": "^2.0.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-config-standard-react": "^2.2.0",
     "eslint-plugin-promise": "^1.0.8",
@@ -54,7 +55,9 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
     "react-styleable": "^2.2.2",
+    "redux": "^3.3.1",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
