--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "normalize.css": "^3.0.3"
   }
 }
